--- a/web/src/main/webapp/WEB-INF/views/duration/index.html
+++ b/web/src/main/webapp/WEB-INF/views/duration/index.html
@@ -11,16 +11,16 @@
 <div ng-repeat="report in reports">
     <div class="row">
         <div class="col-lg-12">
-            <h3 class="page-header">
+            <h3 class="page-header" style="background: aliceblue; padding: 8px;">
                 {{ report.appName }}
             </h3>
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg-2">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> pie chart </h3>
+                    <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Average time spent </h3>
                 </div>
                 <div class="panel-body">
                     <pie-chart data="report.totalDurationReport" formatter="durationFormatter"></pie-chart>
@@ -30,10 +30,10 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-8">
+        <div class="col-lg-10">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> line chart </h3>
+                    <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Request processing time </h3>
                 </div>
                 <div class="panel-body">
                     <line-chart data="report.dailyDurationReport" xkey="xkey" ykeys="report.ykeys" labels="report.ykeys"
