--- a/web/src/main/webapp/WEB-INF/views/duration/index.html
+++ b/web/src/main/webapp/WEB-INF/views/duration/index.html
@@ -20,7 +20,7 @@
         <div class="col-lg-2">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Average time spent </h3>
+                    <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Application hot spots </h3>
                 </div>
                 <div class="panel-body">
                     <pie-chart data="report.totalDurationReport" formatter="durationFormatter"></pie-chart>
@@ -33,7 +33,7 @@
         <div class="col-lg-10">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Request processing time </h3>
+                    <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Request processing time for selected period </h3>
                 </div>
                 <div class="panel-body">
                     <line-chart data="report.dailyDurationReport" xkey="xkey" ykeys="report.ykeys" labels="report.ykeys"
