--- a/web/src/main/webapp/WEB-INF/views/frequent/index.html
+++ b/web/src/main/webapp/WEB-INF/views/frequent/index.html
@@ -2,7 +2,7 @@
 <div class="row">
     <div class="col-lg-12">
         <h1 class="page-header">
-            <small>Average request time</small>
+            <small>Top 10 most frequent requests</small>
         </h1>
     </div>
 </div>
@@ -16,25 +16,19 @@
             <table class="table table-hover table-striped">
                 <thead>
                 <tr>
-                    <th>Date</th>
                     <th>App name</th>
                     <th>Server</th>
                     <th>Url</th>
                     <th>Count</th>
-                    <th>Failed count</th>
-                    <th>Total duration</th>
                     <th>Avg duration</th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr ng-repeat="request in requests">
-                    <td>{{request.timestamp | date: 'yyyy/MM/dd HH:mm' }}</td>
                     <td>{{request.appName}}</td>
                     <td>{{request.serverId}}</td>
                     <td>{{request.url}}</td>
                     <td>{{request.count}}</td>
-                    <td>{{request.failedCount}}</td>
-                    <td>{{request.duration}} ms</td>
                     <td>{{request.avgDuration | number : 2}} ms</td>
                 </tr>
                 </tbody>
