--- a/web/src/main/webapp/WEB-INF/views/duration/index.html
+++ b/web/src/main/webapp/WEB-INF/views/duration/index.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-lg-12">
         <h1 class="page-header">
-            <small>Average request duration</small>
+            <small>Application performance overview</small>
         </h1>
     </div>
 </div>
@@ -9,53 +9,64 @@
 <div control-panel filter="filter" app="appName" refresh="refresh()"></div>
 
 <div ng-repeat="report in reports">
-    <div class="row">
-        <div class="col-lg-12">
-            <h3 class="page-header" style="background: aliceblue; padding: 8px;">
-                {{ report.appName }}
-            </h3>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-2">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Application hot spots </h3>
+
+    <div class="panel panel-green">
+        <div class="panel-heading">
+            <div class="row">
+                <div class="col-xs-3">
+                    <i class="fa fa-tasks fa-5x"></i>
                 </div>
-                <div class="panel-body">
-                    <pie-chart data="report.totalDurationReport" formatter="durationFormatter"></pie-chart>
-                    <div class="text-right">
-                        <a href="#">View Details <i class="fa fa-arrow-circle-right"></i></a>
+                <div class="col-xs-9 text-right">
+                    <div class="huge">{{ report.appName }}</div>
+                    <div>application</div>
+                </div>
+            </div>
+        </div>
+        <div class="panel-footer">
+
+            <div class="row">
+                <div class="col-lg-2">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Application hot spots </h3>
+                        </div>
+                        <div class="panel-body">
+                            <pie-chart data="report.totalDurationReport" formatter="durationFormatter"></pie-chart>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-10">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Request processing time for
+                                selected period </h3>
+                        </div>
+                        <div class="panel-body">
+                            <line-chart data="report.dailyDurationReport" xkey="xkey" ykeys="report.ykeys"
+                                        labels="report.ykeys"
+                                        post-units="ms" x-labels="day"></line-chart>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-lg-10">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Request processing time for selected period </h3>
+
+            <div ng-repeat="avgRequestTime in report.avgRequestTimes">
+                <div
+                     style="color: #337ab7; font-weight: bold; display: inline;">{{avgRequestTime.systemName}}:
                 </div>
-                <div class="panel-body">
-                    <line-chart data="report.dailyDurationReport" xkey="xkey" ykeys="report.ykeys" labels="report.ykeys"
-                                post-units="ms" x-labels="day"></line-chart>
-                    <div class="text-right">
-                        <a href="#">View Details <i class="fa fa-arrow-circle-right"></i></a>
-                    </div>
+                <div style="display: inline;">
+                    {{avgRequestTime.duration | number : 2}} ms
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-2">
-            <div class="table-responsive">
-                <table class="table table-bordered table-hover">
-                    <tr ng-repeat="avgRequestTime in report.avgRequestTimes">
-                        <td ng-class="{'highlighted': avgRequestTime.systemName == 'Total'}">{{avgRequestTime.systemName}}</td>
-                        <td ng-class="{'highlighted': avgRequestTime.systemName == 'Total'}">{{avgRequestTime.duration | number : 2}} ms</td>
-                    </tr>
-                </table>
+
+            <div class="text-right">
+                <a href="#">View Details <i class="fa fa-arrow-circle-right"></i></a>
             </div>
+
+            <div class="clearfix"></div>
         </div>
     </div>
+
+
 </div>
 <!-- /.row -->
