Alerts improvements - Top slowest and popular requests has been merged to alerts infrastructure

--- a/web/src/main/webapp/WEB-INF/views/alerts/index.html
+++ b/web/src/main/webapp/WEB-INF/views/alerts/index.html
@@ -21,8 +21,8 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr class="danger" ng-repeat="alert in alerts">
-                    <td>{{alert.message}}</td>
+                <tr class="{{alert.status}}" ng-repeat="alert in alerts">
+                    <td><i ng-if="alert.status === 'danger'" class="fa fa-exclamation-triangle" style="color: red"></i> {{alert.message}}</td>
                     <td>{{alert.url}}</td>
                 </tr>
                 </tbody>
