--- a/web/src/main/webapp/WEB-INF/views/frequent/index.html
+++ b/web/src/main/webapp/WEB-INF/views/frequent/index.html
@@ -10,6 +10,29 @@
 
 <div control-panel filter="filter" app="appName" refresh="refresh()"></div>
 
-<div ng-repeat="report in reports">
-    <div url-details report="report" xkey="xkey" ykeys="ykeys" labels="labels"></div>
+<div class="row">
+    <div class="col-lg-12">
+        <div class="table-responsive">
+            <table class="table table-hover table-striped">
+                <thead>
+                <tr>
+                    <th>App name</th>
+                    <th>Server</th>
+                    <th>Url</th>
+                    <th>Count</th>
+                    <th>Avg duration</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr ng-repeat="request in requests">
+                    <td>{{request.appName}}</td>
+                    <td>{{request.serverId}}</td>
+                    <td><span url-statistics filter="filter" app-name="appName" url="request.url"></span></td>
+                    <td>{{request.count}}</td>
+                    <td>{{request.avgDuration | number : 2}} ms</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
