--- a/web/src/main/webapp/WEB-INF/views/url-details/index.html
+++ b/web/src/main/webapp/WEB-INF/views/url-details/index.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="col-xs-9 text-right">
                     <div style="font-size: 24px;">{{ report.url }}</div>
-                    <div>request profile for <period></period></div>
+                    <div>request profile</div>
                 </div>
             </div>
         </div>
