--- a/web/src/main/webapp/WEB-INF/views/request/index.html
+++ b/web/src/main/webapp/WEB-INF/views/request/index.html
@@ -2,7 +2,7 @@
 <div class="row">
     <div class="col-lg-12">
         <h1 class="page-header">
-            <small>Average request time</small>
+            <small>Application requests</small>
         </h1>
     </div>
 </div>
@@ -14,29 +14,28 @@
             <table class="table table-hover table-striped">
                 <thead>
                 <tr>
-                    <th>Date</th>
-                    <th>App name</th>
-                    <th>Server</th>
-                    <th>Url</th>
-                    <th>Count</th>
-                    <th>Failed count</th>
-                    <th>Total duration</th>
-                    <th>Avg duration</th>
+
+                    <th><span sort-field sort="sort" field = "appName" title="App name" on-change="sortingChanged()"></span></th>
+                    <th><span sort-field sort="sort" field = "serverId" title="Server" on-change="sortingChanged()"></span></th>
+                    <th><span sort-field sort="sort" field = "url" title="Url" on-change="sortingChanged()"></span></th>
+                    <th><span sort-field sort="sort" field = "count" title="Count" on-change="sortingChanged()"></span></th>
+                    <th><span sort-field sort="sort" field = "avgDuration" title="Avg duration" on-change="sortingChanged()"></span></th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr ng-repeat="request in requests">
-                    <td>{{request.timestamp | date: 'yyyy/MM/dd HH:mm' }}</td>
                     <td>{{request.appName}}</td>
                     <td>{{request.serverId}}</td>
-                    <td>{{request.url}}</td>
+                    <td><span url-statistics start-date="filter.dateRange.startDate" end-date="filter.dateRange.endDate" app-name="filter.appName" url="request.url"></span></td>
                     <td>{{request.count}}</td>
-                    <td>{{request.failedCount}}</td>
-                    <td>{{request.duration}} ms</td>
                     <td>{{request.avgDuration | number : 2}} ms</td>
                 </tr>
                 </tbody>
             </table>
         </div>
     </div>
+</div>
+
+<div class="row">
+    <div pagination="pagination" has-more="hasMore()" on-change="paginationChanged()" ></div>
 </div>
